--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -15,6 +16,8 @@
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^1.0.6",
     "@types/js-cookie": "^3.0.3",
+    "axios": "^1.4.0",
+    "express": "^4.18.2",
     "next": "latest",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
